--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation project(':capacitor-storage')
 
 }
-
+apply from: "../../node_modules/cordova-plugin-fcm-with-dependecy-updated/src/android/FCMPlugin.gradle"
 
 if (hasProperty('postBuildExtras')) {
   postBuildExtras()
