--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@awesome-cordova-plugins/fcm": "^5.44.0",
     "@capacitor/android": "3.5.1",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.5.1",
@@ -29,6 +30,8 @@
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.0.0",
+    "cordova-plugin-fcm-with-dependecy-updated": "^7.8.0",
+    "pusher-js": "^7.3.0",
     "rxjs": "~6.6.0",
     "ts-md5": "^1.2.11",
     "tslib": "^2.2.0",
